--- a/src/App.css
+++ b/src/App.css
@@ -63,12 +63,18 @@ table {
   min-width: 100%;
   min-height: 100%; }
 
-div.app__content {
+.app__content {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 1; }
+
+.app__scoreboard {
+  height: 250px;
+  margin-left: 5%;
+  margin-bottom: 5%;
+  max-width: 80vw; }
 
 /*# sourceMappingURL=App.css.map */
