--- a/src/App.scss
+++ b/src/App.scss
@@ -67,7 +67,7 @@ table {
   min-height: 100%;
 }
 
-div.app__content {
+.app__content {
 position:absolute;
   top:0;
   left:0;
@@ -75,4 +75,13 @@ position:absolute;
   height:100%;
   z-index:1;
 }
+
+.app__scoreboard {
+height:250px;
+  margin-left:5%;
+  margin-bottom:5%;
+  max-width:80vw;
+}
+
+
 
